syntax = "proto3";

option java_multiple_files = true;
option java_package = "dk.danishlightning.buygittinsindex";
option java_outer_classname = "BuyGittinsIndexProto";

package buygittinsindex;

// Protocol for service "buy Gittins Index"
// at DanishLightning.dk

service BuyGittinsIndex {

	// When data has been entered and the button
	// "BUY" has been pressed

	rpc OrderGittinsIndex(Order) returns (Bill) {}

	// When the bill has been received,
	// the javaxcript checks every second
	// whether the bill has been paid

	rpc Deliver(R_HASH) returns (Result) {}
}

message Order {
  int32 discount = 1;
  int32 successes = 2;
  int32 failures = 3;
}

message Bill {
  string billText = 1;
  string r_hash = 2; 
}

message R_HASH {
  string r_hash = 1;
  // The following are for development purposes
  // The server must have a db with
  // hashes of the bills and Order.
  // Running w/o this db, send the data again
  int32 discount = 3;
  int32 successes = 4;
  int32 failures = 5; 
}

message Result {
  boolean paid = 1;
  int32 gittinsIndex = 2;
}  
